Сделал header и секцию с услугами(без адаптива)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/splide.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Light</title>
 </head>
 <body>
+    <div class="prelouder">
+        <div class="preloud"></div>
+    </div>
+    <div class="content">
+        <header class="header">
+            <div class="container">
+                <div class="header__wrapper">
+                    <div class="header__logo">
+                        <a href="#" class="header__logo-img">
+                            <img src="icons/logo.svg" alt="Логотип сайта">
+                        </a>
+                        <div class="header__logo-name">Клиника "Свет"</div>
+                    </div>
+                    <nav class="header__menu">
+                        <ul class="header__items">
+                            <li class="header__item">
+                                <a href="#" class="header__link">Услуги</a>
+                            </li>
+                            <li class="header__item">
+                                <a href="#" class="header__link">О нас</a>
+                            </li>
+                            <li class="header__item">
+                                <a href="#" class="header__link">Акции</a>
+                            </li>
+                            <li class="header__item">
+                                <a href="#" class="header__link">Преимущества</a>
+                            </li>
+                            <li class="header__item">
+                                <a href="#" class="header__link">Отзывы</a>
+                            </li>
+                            <li class="header__item">
+                                <a href="#" class="header__link">Обратная связь</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="header__contacts">
+                        <a href="tel:+79026063289" class="header__contacts-icon">
+                            <img src="icons/phone.svg" alt="иконка телефона">
+                        </a>
+                        <a href="tel:+79026053289" class="header__contacts-link">8-902-606-32-89</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="services">
+                <div class="splide" role="group" aria-label="Splide Basic HTML Example">
+                    <div class="splide__arrows">
+                        <button class="splide__arrow splide__arrow--prev">
+                            <img src="img/button-prev.png" alt="Стрелка назад">
+                        </button>
+                        <button class="splide__arrow splide__arrow--next">
+                            <img src="img/button-next.png" alt="Стрелка вперед">
+                        </button>
+                  </div>
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide">
+                                <div class="services__item">
+                                    <div class="services__item-img">
+                                        <img src="img/MRT.jpg" alt="МРТ">
+                                    </div>
+                                    <h2 class="services__item-name">МРТ, МРТ с контрастированием</h2>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="services__item">
+                                    <div class="services__item-img">
+                                        <img src="img/KT.jpg" alt="КТ">
+                                    </div>
+                                    <h2 class="services__item-name">КТ, КТ с контрастированием</h2>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="services__item">
+                                    <div class="services__item-img">
+                                        <img src="img/RG.jpg" alt="Рентгенографтя">
+                                    </div>
+                                    <h2 class="services__item-name">Рентгенография костно-суставной системы, рентгенография внутрениих органов, рентгенография с контрастированием</h2>
+                                </div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="services__item">
+                                    <div class="services__item-img">
+                                        <img src="img/Uzi.jpg" alt="УЗИ">
+                                    </div>
+                                    <h2 class="services__item-name">Ультразвуковое исследование</h2>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
     <script src="js/wow.min.js"></script>
     <script src="js/splide.min.js"></script>
     <script src="js/inputmask.min.js"></script>
